--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Inter", sans-serif;
-  color: white;
+  color: black;
   background-color: white;
   overflow-x: hidden;
 }
